# homelab

./: README.md
adguard-home/: compose.yaml
beszel/: compose.yaml  docker-compose.yaml
dagu/: compose.yaml  python-worker.Dockerfile
dagu/dags/: analyze-ghostfolio.yaml  sync-ghostfolio.yaml  test.yaml
dagu/scripts/analyze-ghostfolio/: mise.toml  profile.toml  pyproject.toml
dagu/scripts/analyze-ghostfolio/src/analyze_ghostfolio/: analyzer.py  main.py  models.py
dagu/scripts/analyze-ghostfolio/src/analyze_ghostfolio/prompt-templates/: instructions.md  output.md
dagu/scripts/sync-ghostfolio/: config.toml  mise.toml  pyproject.toml
dagu/scripts/sync-ghostfolio/src/sync_ghostfolio/: __init__.py  main.py  models.py
dagu/scripts/sync-ghostfolio/src/sync_ghostfolio/synchronizers/: _base.py  _models.py  _notifications.py  _synchronizer.py  crypto.py  freedom24.py  indexa.py  myinvestor.py
dagu/scripts/test/: pyproject.toml  test.py
ghostfolio/: compose.yaml
homeflix/: README.md  compose.yaml  docker-compose.yaml
homeflix/jellyfin/config/: system.xml
homeflix/jellyseerr/config/: settings.json
homeflix/prowlarr/config/: config.xml
homeflix/systemd/: homeflix.service
homepage/: compose.yaml  docker-compose.yaml
homepage/config/: settings.yaml
homepage/systemd/: homepage.service
netdata/: docker-compose.yaml
netdata/config/: .environment  .install-type
scripts/: backup-config  manage-lab
twenty/: compose.yaml
uptime-kuma/: docker-compose.yaml
uptime-kuma/systemd/: uptime-kuma.service
watchtower/: compose.yaml
(+8 files in other folders)
